--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
             </div>
         </div>
     </div>
-
+    footer>
+            <a href="https://www.linkedin.com/in/arbazxali/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <span>Contact Developer - Arbaz</span>
+    </footer>
     <script src="./script.js"></script>
 </body>
 </html>
