--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adad Calculator</title>
     <link rel="stylesheet" href="./style.css">
+    <style>
+        /* Basic styles for the footer */
+        footer {
+            background-color: #282c34;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+        
+        footer a {
+            color: #61dafb;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -35,10 +56,11 @@
             </div>
         </div>
     </div>
-    footer>
-            <a href="https://www.linkedin.com/in/arbazxali/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <span>Contact Developer - Arbaz</span>
-    </footer>
+
     <script src="./script.js"></script>
+    <footer>
+        <p>Contact the Developer: <a href="mailto:arbaz250ali@gmail.com">arbaz250ali@gmail.com</a></p>
+        <p>GitHub Profile: <a href="https://github.com/arbaxali" target="_blank">Your GitHub</a></p>
+    </footer>
 </body>
 </html>
