--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="app-container">
             <!-- Input Section -->
             <div id="input-section" class="headings-container">
-                <h2>Speech to Text Converter</h2>
+                <h2>Adad Calculator</h2>
                 <p>Press the button to start listening</p>
             </div>
 
