--- a/index.html
+++ b/index.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adad Calculator</title>
+    <title>Speech to Text Converter</title>
     <link rel="stylesheet" href="./style.css">
-    
 </head>
+
 <body>
     <div class="container">
         <div class="app-container">
-            <!-- Input Section -->
             <div id="input-section" class="headings-container">
-                <h2>Adad Calculator</h2>
-                <p>Press the button to start listening</p>
+                <h2>Speech to Text Converter</h2>
+                <p>Convert English text to Urdu effortlessly!</p>
             </div>
 
             <div class="interaction-container">
-                <div class="text-box-wrapper">
-                    <textarea id="urduText" class="text-control"></textarea>
-                    <button id="startListening" class="inside-textbox-btn">Start Listening</button>
+                <!-- English Input Text Box -->
+                <label for="englishText" class="form-label">Enter English Text</label>
+                <textarea id="englishText" class="text-control" placeholder="Type text in English..."></textarea>
+
+                <!-- Urdu Output Text Box -->
+                <label for="urduText" class="form-label">Converted Urdu Text</label>
+                <textarea id="urduText" class="text-control" placeholder="Converted Urdu text..." readonly></textarea>
+
+                <!-- Buttons -->
+                <div class="button-group">
+                    <button id="startListening" class="btn">Start Listening</button>
+                    <button id="translateButton" class="btn">Translate</button>
+                    <button id="submitButton" class="btn">Calculate</button>
                 </div>
-                <button id="submitButton" class="btn">Submit</button>
             </div>
 
-            <!-- Result Section with Back Button -->
+            <!-- Result Section -->
             <div id="result-section" style="display:none;" class="result-container">
                 <h2>Calculation Result</h2>
                 <p id="resultText"></p>
                 <p id="adadValue"></p>
                 <ul id="adadBreakdown"></ul>
-                
-                <!-- Back Button -->
                 <button id="backButton" class="btn">Back</button>
             </div>
         </div>
     </div>
-
     <script src="./script.js"></script>
-
 </body>
+
 </html>
